--- a/pom.xml
+++ b/pom.xml
@@ -170,7 +170,7 @@
     <profile>
       <id>arq-jbossas-5-managed</id>
       <activation>
-        <activeByDefault>true</activeByDefault>
+        <activeByDefault>false</activeByDefault>
       </activation>
       <dependencies>
         <dependency>
@@ -203,6 +203,9 @@
     </profile>
     <profile>
       <id>arq-jbossas-4-managed</id>
+      <activation>
+        <activeByDefault>true</activeByDefault>
+      </activation>
       <dependencies>
         <dependency>
           <groupId>org.jboss.arquillian.container</groupId>
