--- a/pom.xml
+++ b/pom.xml
@@ -200,6 +200,35 @@
         </testResources>
       </build>
     </profile>
+        <profile>
+      <id>arq-jbossas-5-remote</id>
+      <activation>
+        <activeByDefault>false</activeByDefault>
+      </activation>
+      <dependencies>
+        <dependency>
+          <groupId>org.jboss.arquillian.container</groupId>
+          <artifactId>arquillian-jbossas-remote-5.1</artifactId>
+          <version>1.0.0.CR2</version>
+        </dependency>
+        <dependency>
+          <groupId>org.jboss.jbossas</groupId>
+          <artifactId>jboss-as-client</artifactId>
+          <version>5.1.0.GA</version>
+          <type>pom</type>
+        </dependency>
+      </dependencies>
+      <build>
+        <testResources>
+          <testResource>
+            <directory>src/test/resources</directory>
+          </testResource>
+          <testResource>
+            <directory>src/test/resources-jboss-5</directory>
+          </testResource>
+        </testResources>
+      </build>
+    </profile>
     <profile>
       <id>arq-jbossas-4-managed</id>
       <activation>
@@ -234,7 +263,6 @@
           <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-dependency-plugin</artifactId>
-            <version>2.1</version>
             <executions>
               <execution>
                 <id>unpack</id>
@@ -264,6 +292,41 @@
           </testResource>
           <testResource>
             <directory>src/test/resources-jboss-4</directory>
+          </testResource>
+        </testResources>
+      </build>
+    </profile>
+    <profile>
+      <id>arq-jbossas-4-remote</id>
+      <activation>
+        <activeByDefault>true</activeByDefault>
+      </activation>
+      <dependencies>
+        <dependency>
+          <groupId>org.jboss.arquillian.container</groupId>
+          <artifactId>arquillian-jbossas-remote-4.2</artifactId>
+          <version>1.0.0.CR2</version>
+        </dependency>
+        <dependency>
+          <groupId>org.jboss.client</groupId>
+          <artifactId>jbossall-client</artifactId>
+          <version>4.2.3.GA</version>
+          <scope>provided</scope>
+        </dependency>
+        <dependency>
+          <groupId>dom4j</groupId>
+          <artifactId>dom4j</artifactId>
+          <version>1.6.1</version>
+          <scope>provided</scope>
+        </dependency>
+      </dependencies>
+      <build>
+        <testResources>
+          <testResource>
+            <directory>src/test/resources</directory>
+          </testResource>
+          <testResource>
+            <directory>src/test/resources-jboss-4-remote</directory>
           </testResource>
         </testResources>
       </build>
