--- a/pom.xml
+++ b/pom.xml
@@ -39,7 +39,7 @@
   <!-- Properties -->
   <properties>
     <!-- Versioning -->
-    <version.arquillian_core>1.0.0.CR7</version.arquillian_core>
+    <version.arquillian_core>1.0.1.Final</version.arquillian_core>
     <version.arquillian_jbossas>1.0.0.CR3</version.arquillian_jbossas>
 
     <version.jbossas_4>4.2.3.GA</version.jbossas_4>
