--- a/pom.xml
+++ b/pom.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
   <!-- Parent -->
   <parent>
@@ -362,6 +363,24 @@
             <directory>src/test/resources-jboss-4-remote</directory>
           </testResource>
         </testResources>
+      </build>
+    </profile>
+    <profile>
+      <id>build-server</id>
+      <build>
+        <plugins>
+          <!-- surefire default forks the JVM for testing, so we need to
+            pass on the maven.repo.local variable so the MavenResovler used in the test
+            cases can read from the same local repo. -->
+          <plugin>
+            <artifactId>maven-surefire-plugin</artifactId>
+            <configuration>
+              <systemProperties>
+                <maven.repo.local>${maven.repo.local}</maven.repo.local>
+              </systemProperties>
+            </configuration>
+          </plugin>
+        </plugins>
       </build>
     </profile>
   </profiles>
