--- a/pom.xml
+++ b/pom.xml
@@ -39,12 +39,14 @@
 
   <!-- Properties -->
   <properties>
+    <jbossas_7.dist.url>http://www.redpill-linpro.com/sites/default/files/node_files/jboss-as-7.2.0.final_.zip</jbossas_7.dist.url>
     <!-- Versioning -->
     <version.arquillian_core>1.1.1.Final</version.arquillian_core>
     <version.arquillian_jbossas>1.0.0.CR3</version.arquillian_jbossas>
 
     <version.jbossas_4>4.2.3.GA</version.jbossas_4>
     <version.jbossas_5>5.1.0.GA</version.jbossas_5>
+    <version.jbossas_7>7.1.1.Final</version.jbossas_7>
     <version.jbossas_manager>1.0.3.GA</version.jbossas_manager>
     <version.dom4j>1.6.1</version.dom4j>
 
@@ -95,7 +97,7 @@
     <dependency>
       <groupId>org.jboss.seam</groupId>
       <artifactId>jboss-seam</artifactId>
-      <version>${version.seam}</version>
+      <version>2.2.1.Final</version>
       <scope>provided</scope>
       <exclusions>
         <exclusion>
@@ -209,52 +211,73 @@
   <profiles>
     <profile>
       <id>arq-jbossas-7-managed</id>
-      <activation>
-        <activeByDefault>false</activeByDefault>
-      </activation>
       <dependencies>
         <dependency>
-          <groupId>org.jboss.spec</groupId>
-          <artifactId>jboss-javaee-6.0</artifactId>
-          <version>2.0.0.Final</version>
-          <type>pom</type>
-          <scope>provided</scope>
+          <groupId>org.jboss.arquillian.protocol</groupId>
+          <artifactId>arquillian-protocol-servlet</artifactId>
+          <scope>test</scope>
         </dependency>
         <dependency>
           <groupId>org.jboss.as</groupId>
           <artifactId>jboss-as-arquillian-container-managed</artifactId>
-          <version>7.2.0.Final</version>
+          <version>${version.jbossas_7}</version>
+          <scope>test</scope>
         </dependency>
-      </dependencies>
-    </profile>
-
-    <profile>
-      <id>jbossas-remote-7</id>
-      <activation>
-        <activeByDefault>true</activeByDefault>
-      </activation>
-      <dependencies>
         <dependency>
           <groupId>org.jboss.spec</groupId>
-          <artifactId>jboss-javaee-web-6.0</artifactId>
-          <version>2.0.0.Final</version>
+          <artifactId>jboss-javaee-6.0</artifactId>
+          <version>3.0.2.Final</version>
           <type>pom</type>
-          <scope>test</scope>
-        </dependency>
-        <dependency>
-          <groupId>org.jboss.as</groupId>
-          <artifactId>jboss-as-arquillian-container-remote</artifactId>
-          <scope>test</scope>
-          <version>7.2.0.Final</version>
+          <scope>provided</scope>
+          <exclusions>
+            <exclusion>
+              <groupId>xalan</groupId>
+              <artifactId>xalan</artifactId>
+            </exclusion>
+          </exclusions>
         </dependency>
       </dependencies>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-dependency-plugin</artifactId>
+            <executions>
+              <execution>
+                <id>unpack</id>
+                <phase>process-test-classes</phase>
+                <goals>
+                  <goal>unpack</goal>
+                </goals>
+                <configuration>
+                  <artifactItems>
+                    <artifactItem>
+                      <groupId>org.jboss.as</groupId>
+                      <artifactId>jboss-as-dist</artifactId>
+                      <version>${version.jbossas_7}</version>
+                      <type>zip</type>
+                      <overWrite>false</overWrite>
+                      <outputDirectory>${project.build.directory}</outputDirectory>
+                    </artifactItem>
+                  </artifactItems>
+                </configuration>
+              </execution>
+            </executions>
+          </plugin>
+        </plugins>
+        <testResources>
+          <testResource>
+            <directory>src/test/resources</directory>
+          </testResource>
+          <testResource>
+            <directory>src/test/resources-jboss-7</directory>
+          </testResource>
+        </testResources>
+      </build>
     </profile>
 
     <profile>
       <id>arq-jbossas-5-managed</id>
-      <activation>
-        <activeByDefault>false</activeByDefault>
-      </activation>
       <dependencies>
         <dependency>
           <groupId>org.jboss.arquillian.container</groupId>
@@ -289,9 +312,6 @@
     </profile>
     <profile>
       <id>arq-jbossas-5-remote</id>
-      <activation>
-        <activeByDefault>false</activeByDefault>
-      </activation>
       <dependencies>
         <dependency>
           <groupId>org.jboss.arquillian.container</groupId>
